src/App.css
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  font-family: "Poppins", sans-serif;
}
html {
  scroll-behavior: smooth;
}
.App {
  background-image: url("./assets/mooning-1920x1080.png");
}
#cursor {
  z-index: 99999;
  position: absolute;
}
#home {
  position: relative;
  z-index: 0;
}

#skills {
  position: relative;
  z-index: 8;
  background-image: url("./assets/mooning-1920x1080.png");
}
#slideshow {
  position: relative;
  background-color: transparent;
  z-index: 9;
}
#projects {
  position: relative;
  z-index: 10;
}
#timeline {
  position: relative;
  z-index: 11;
}
@media (max-width: 600px) {
  #slideshow {
    width: 100vw;
  }
}

